--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -12,4 +12,9 @@ jobs:
          run: |
            node -v
            npm -v
+       - name: phython Commands
+         run: |
+           important platfrom
+           print(platform.processor())
+         shell: python      
            
