--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,20 +1,12 @@
-name: Shell Commands
+name: Shell Commands 
 
 on: [push]
 
 jobs:
-   runs-shell-Commands:
-     runs-on: ubuntu-latest
-     steps:
-       - name: echo a string
-         run: echo "Hello World"
-       - name: Multiline Scripts
-         run: |
-           node -v
-           npm -v
-       - name: phython Commands
-         run: |
-           import platfrom
-           print(platform.processor())
-         shell: python      
+ run-shell-Commands:
+    runs-on: ubuntu-latest
+    steps:
+     - name: echo a string
+       run: echo "Hello World!"
+
            
