--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -8,5 +8,9 @@ jobs:
     steps:
      - name: echo a string
        run: echo "Hello World!"
+     - name: multiline statement
+       run: |
+        node --version
+        npm --version     
 
            
