--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,12 +1,12 @@
 name: Shell Commands 
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
  run-shell-Commands:
     runs-on: ubuntu-latest
     steps:
-     - name: echo a string
+     - name: echo a strings
        run: echo "Hello World!"
      - name: multiline statement
        run: |
